--- a/mediaCSS/DraLGS-big.css
+++ b/mediaCSS/DraLGS-big.css
@@ -48,6 +48,8 @@
     letter-spacing: 1.5px;
     opacity: 0.8;
     padding: 4px;
+    text-decoration: none;
+    color: var(--soft-grey);
     
 }
 .nav_link:hover {
