--- a/styles/pagesStyles.css
+++ b/styles/pagesStyles.css
@@ -1,5 +1,8 @@
 @import './global.css';
 
+main {
+    min-height: 100vh;
+}
 .description,
 .benefits {
     width: 100vw;
@@ -13,7 +16,16 @@
 .pd_top {
     width: 100%;
     height: 70px;
-    background-color: var(--sub_pink);
+    background-color: #253761fc;;
+}
+
+.flex_big_size {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 .description_image_continer {
     width: 100%;
@@ -87,12 +99,15 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    background-color: var(--total_black);
+    background-color: var(--dow_green-text);
     padding: 0 5%;
 }
 .pending_action .content_action_personal_data p,
 .pending_action .button_action .color_in_black {
-    color: var(--dow_green-text);
+    color: var(--total_black);
+}
+.pending_action .button_action span {
+    background-color: var(--total_black);
 }
 
 @media screen and (min-width: 750px) and (min-height: 900px) {
@@ -100,6 +115,7 @@
         width: 100%;
         height: auto;
         display: flex;
+        flex-direction: row;
         gap: 40px;
         justify-content: flex-start;
         padding-right: 30px;
@@ -114,6 +130,7 @@
         width: 100%;
         height: auto;
         display: flex;
+        flex-direction: row;
         gap: 40px;
         justify-content: flex-start;
         padding-right: 60px;
@@ -127,6 +144,7 @@
     .flex_big_size {
         gap: 50px;
         padding-right: 60px;
+        flex-direction: row;
     }
     .description_image_continer {
         padding-top: 50px;
@@ -169,9 +187,14 @@
     }
 }
 @media screen and (min-width: 1200px) {
+    .pd_top {
+        width: 100%;
+        height: 80px;
+    }
     .flex_big_size {
         gap: 60px;
         padding-right: 80px;
+        flex-direction: row;
     }
     .description_image_continer {
         width: 80%;
@@ -216,6 +239,10 @@
     }
 }
 @media screen and (min-width: 1200px) and (min-height: 900px) {
+    .pd_top {
+        width: 100%;
+        height: 80px;
+    }
     .flex_big_size {
         gap: 80px;
         padding-right: 80px;
@@ -226,6 +253,10 @@
     }
 }
 @media screen and (min-width: 1900px) {
+    .pd_top {
+        width: 100%;
+        height: 80px;
+    }
     .flex_big_size {
         gap: 80px;
         padding: 0px;
