--- a/styles/pagesStyles.css
+++ b/styles/pagesStyles.css
@@ -201,12 +201,13 @@ main {
     }
     .flex_big_size {
         gap: 60px;
-        padding-right: 80px;
-        flex-direction: row;
+        padding: 0px;
+        max-width: 1000px;
+        margin-top: 10px;
     }
     .description_image_continer {
-        width: 80%;
-        height: 55vh;
+        width: 65%;
+        height: 50vh
     }
     .description_text_continer h2 {
         font-size: 2.6rem;
@@ -224,7 +225,7 @@ main {
     }
     .content_tittle_benefist {
         width: 80%;
-        max-width: 1000px;
+        max-width: 900px;
         gap: 28px;
         margin: 50px 0 30px;
     }
@@ -238,7 +239,7 @@ main {
     }
     .text_benefist {
         width: 80%;
-        max-width: 1000px;
+        max-width: 900px;
     }
     .text_benefist li {
         list-style: none;
@@ -257,11 +258,10 @@ main {
     }
     .flex_big_size {
         gap: 80px;
-        padding-right: 80px;
     }
     .description_image_continer {
-        width: 40%;
-        height: 40vh;
+        width: 85%;
+        height: 35vh;
     }
 }
 @media screen and (min-width: 1900px) {
