--- a/styles/indMain.css
+++ b/styles/indMain.css
@@ -12,7 +12,7 @@
     justify-content: flex-start;
     align-items: center;
 }
-.video {
+.back_video {
     width: 100%;
     height: 100vh;
     object-fit: cover;
