--- a/mediaCSS/DraLGS-tablet.css
+++ b/mediaCSS/DraLGS-tablet.css
@@ -227,6 +227,50 @@
         letter-spacing: 0.6px;
         text-align: center;
     }
+
+    .content_form {
+        max-width: 540px;
+    }
+    .form {
+        gap: 12px;  
+    }
+    .message, .signin {
+        font-size: 1.4rem;
+    }
+    .form label .input {
+        padding: 16px;
+        border: 2px solid rgba(105, 105, 105, 0.397);
+    }
+    .input {
+        font-size: 1.6rem;
+        letter-spacing: 0.4px;
+    }
+
+    .form label .input + span {
+        left: 16px;
+        top: 0px;
+        font-size: 1.6rem;
+        cursor: text;
+        transition: 0.3s ease;
+    }
+    .form label .input:placeholder-shown + span {
+        top: 16px;
+        font-size: 1.6rem;
+    }
+    .form label .input:focus + span,
+    .form label .input:valid + span {
+        color: var(--sub_pink);
+        top: 0px;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+    .input_text {
+        height: 120px;
+    }
+    .submit {
+        padding: 16px;
+        font-size: 2rem;
+    }
 }
 
 @media screen and (min-width: 830px) and (max-height: 800px){ 
@@ -487,5 +531,49 @@
     .card_menu a {
         font-size: 1.6rem;
         line-height: 16px;
+    }
+
+    .content_form {
+        max-width: 700px;
+    }
+    .form {
+        gap: 16px;  
+    }
+    .message, .signin {
+        font-size: 1.6rem;
+    }
+    .form label .input {
+        padding: 20px;
+        border: 2px solid rgba(105, 105, 105, 0.397);
+    }
+    .input {
+        font-size: 1.6rem;
+        letter-spacing: 0.4px;
+    }
+
+    .form label .input + span {
+        left: 20px;
+        top: 0px;
+        font-size: 1.6rem;
+        cursor: text;
+        transition: 0.3s ease;
+    }
+    .form label .input:placeholder-shown + span {
+        top: 20px;
+        font-size: 1.6rem;
+    }
+    .form label .input:focus + span,
+    .form label .input:valid + span {
+        color: var(--sub_pink);
+        top: 0px;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+    .input_text {
+        height: 160px;
+    }
+    .submit {
+        padding: 20px;
+        font-size: 2.2rem;
     }
 }
